--- a/index.html
+++ b/index.html
@@ -6,15 +6,26 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Stopwatch</title>
 
         <link rel="stylesheet" href="style.css" />
-
-        <script defer src="main.js"></script>
 
     </head>
 
     <body>
         
+        <div class="watch">
+            <div class="time">
+                00:00:00
+            </div>
+            <div class="controls">
+                <button class="start">Start</button>
+                <button class="stop">Stop</button>
+                <button class="reset">Reset</button>
+            </div>
+        </div>
+        
+        <script defer src="main.js"></script>
+
     </body>
 </html>
